objects/Transportation_Dispatch_Request__c.object
<CustomObject>
    <description>Junction object to populate data between Salesforce and Heroku</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Delivery Name</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transportation Dispatch Requests</relationshipLabel>
        <relationshipName>Transportation_Dispatch_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acv_Transportation_Request_Id__c</fullName>
        <description>MySQL id for transport requests in acv-api</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Acv Transportation Request Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Delivery_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Alternate Delivery Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Delivery_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Alternate Delivery City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Delivery_Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Alternate Delivery Country</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Delivery_Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Alternate Delivery Postal Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Delivery_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Alternate Delivery State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auction_Number_Searchable__c</fullName>
        <description>Auction Number (NON-SFDC ID)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Auction Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auction_Number__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Auction ID</description>
        <inlineHelpText>Specify the Auction Number that this Case is related to.</inlineHelpText>
        <label>Auction Number</label>
        <referenceTo>Auction__c</referenceTo>
        <relationshipLabel>Transportation Dispatch Requests</relationshipLabel>
        <relationshipName>Transportation_Dispatch_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOL_Link__c</fullName>
        <description>AWS S3 link for BOL</description>
        <encryptionScheme>None</encryptionScheme>
        <label>BOL Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BOL_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BOL Received</description>
        <label>BOL Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buyer_Pickup_Notes__c</fullName>
        <description>Buyer Pickup Notes/Instructions - copy of field of same name from Case object</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Buyer Pickup Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Buyer_Price__c</fullName>
        <description>$ Charged to Customer</description>
        <label>Buyer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Delivery Contact Name</description>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transportation Dispatch Requests</relationshipLabel>
        <relationshipName>Transportation_Dispatch_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactPhone__c</fullName>
        <description>Delivery Phone</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Date_Delivered_Actual__c</fullName>
        <description>Date Reported Delivered</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Delivered Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Delivered__c</fullName>
        <description>Delivered TimeStamp</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Delivered CD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Estimated_Pick_Up__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Estimated Pick Up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_First_Accepted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date First Accepted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_First_Posted_Portal__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date First Posted Portal</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_First_Posted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date First Posted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Last_Accepted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Last Accepted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Last_Posted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Last Posted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Picked_Up__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Picked Up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Default_Delivery_Address__c</fullName>
        <description>Delivery Address</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Delivery_City__c</fullName>
        <description>Delivery City</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Delivery_Postal_Code__c</fullName>
        <description>Delivery Zip</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Delivery_State__c</fullName>
        <description>Delivery State</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Pickup_City__c</fullName>
        <description>Pickup City</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pickup City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Pickup_Postal_Code__c</fullName>
        <description>Pickup Zip</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pickup Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Pickup_State__c</fullName>
        <description>Pickup State</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pickup State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Delayed__c</fullName>
        <label>Delivery Delayed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Delivery instructions to carrier</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dispatch_Comment__c</fullName>
        <description>Dispatch Comment (Carrier to us)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Dispatch Comment (Carrier to ACV)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Driver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Driver</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transportation Dispatch Requests (Driver)</relationshipLabel>
        <relationshipName>Transportation_Dispatch_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dry_Run_Fee__c</fullName>
        <label>Dry Run Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Delivery__c</fullName>
        <description>Delivery Date/Time</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Expected Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Pick_Up__c</fullName>
        <description>Pickup Date/Time</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Expected Pick Up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <formula>Related_Transportation_Case__r.ACV_Transportation_Request_Id__c</formula>
        <label>Legacy Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marked_Picked_Up_in_CD__c</fullName>
        <label>Marked &apos;Picked Up&apos; in CD?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Times_Cancelled__c</fullName>
        <label>Number of Times Cancelled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Times_Declined__c</fullName>
        <label>Number of Times Declined</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pickup_Address__c</fullName>
        <description>Pickup Address</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pickup Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posted_Price__c</fullName>
        <description>Carrier Pay</description>
        <label>Posted Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Pre_Promotion__c</fullName>
        <description>Price before promotion is applied to it.</description>
        <label>Price Pre Promotion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Related_Transportation_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Transportation Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Transportation Dispatch Requests (Related Transportation Case)</relationshipLabel>
        <relationshipName>Transportation_Dispatch_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Release Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release_Pickup_Phrase__c</fullName>
        <description>Pickup_Phrase from auctions_attribute table</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Release Pickup Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_Contact_Phone__c</fullName>
        <description>Pickup Phone</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Seller Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Seller_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Pickup Contact Name</description>
        <label>Seller Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transportation Dispatch Requests (Seller Contact)</relationshipLabel>
        <relationshipName>Transportation_Dispatch_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seller_Dealership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Pickup Name</description>
        <label>Seller</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transportation Dispatch Requests (Seller)</relationshipLabel>
        <relationshipName>Transportation_Dispatch_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seller_Inventory_Id__c</fullName>
        <description>The Inventory Id for the vehicle on the seller lot</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Seller Inventory Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_Pick_Up_Notes__c</fullName>
        <description>Seller Pickup Notes/Instructions - copy of field of same name from Case object</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Seller Pickup Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Send_to_Central_Dispatch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to Central Dispatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unwind Transportation Requested</fullName>
                </value>
                <value>
                    <fullName>Ready-to-Post</fullName>
                </value>
                <value>
                    <fullName>Sent to Third-Party</fullName>
                </value>
                <value>
                    <fullName>Failed Post</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
                <value>
                    <fullName>Pending-Offer</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Picked-Up</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Awaiting Release</fullName>
                </value>
                <value>
                    <fullName>Cancelled by ACV</fullName>
                </value>
                <value>
                    <fullName>Cancelled by Transporter</fullName>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Staged</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Finalized</fullName>
                </value>
                <value>
                    <fullName>Closed Dry Run</fullName>
                </value>
                <value>
                    <fullName>Non-Responsive-Unpaid</fullName>
                </value>
                <value>
                    <fullName>Awaiting Payment</fullName>
                    <isActive>false</isActive>
                    <label>Awaiting Payment</label>
                </value>
                <value>
                    <fullName>cancelled</fullName>
                    <isActive>false</isActive>
                    <label>cancelled</label>
                </value>
                <value>
                    <fullName>in_transit</fullName>
                    <isActive>false</isActive>
                    <label>in_transit</label>
                </value>
                <value>
                    <fullName>requested</fullName>
                    <isActive>false</isActive>
                    <label>requested</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Times_Posted_to_CD__c</fullName>
        <label>Times Posted to CD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transportation_Distance__c</fullName>
        <label>Transportation Distance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transporter_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transporter Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transportation Dispatch Requests (Transporter Account)</relationshipLabel>
        <relationshipName>Transportation_Dispatch_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_Make__c</fullName>
        <description>Vehicle Make</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Vehicle Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model__c</fullName>
        <description>Vehicle Model</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Vehicle Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Style__c</fullName>
        <description>Vehicle Class</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Vehicle Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Trim__c</fullName>
        <description>Vehicle Trim</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Vehicle Trim</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Vin__c</fullName>
        <description>VIN</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Vehicle Vin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Year__c</fullName>
        <description>Vehicle Year</description>
        <label>Vehicle Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Year</valueSetName>
        </valueSet>
    </fields>
    <label>Transportation Dispatch Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Related_Transportation_Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Related_Transportation_Case__c</field>
            <operation>contains</operation>
            <value>02175778</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Transportation_Queue_Transportation_Dispatch_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Transportation Queue</label>
        <queue>Transportation_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Transportation Dispatch Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transportation Dispatch Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>